	  2000/100 printer commands.

    CHANGES

	- The command-line now allows --fontsize values from 4
	  to 26 to match the GUI.
	- Now use a 0.001 point tolerance when checking for
	  content that overflows the page/cell.
	- HTMLDOC no longer enables interpolation of 2-color
	  images.
	- The default vertical alignment of images is "BOTTOM"
	  to match the HTML specification.

    BUG FIXES

	- Images did not default to align=bottom, and the
	  align=bottom line spacing calculation was incorrect.
	- Whitespace before a link was underlined.
	- Fixed a table column sizing bug.
	- HTMLDOC didn't read back the HTTP response properly in
	  all situations.
	- Fixed some more PNG transparency cases.
	- The PageBoundingBox comments in PostScript output did
	  not account for the back page when duplexing was
	  enabled.
	- HTMLDOC generated an incorrect image mask for some
	  images.


CHANGES IN HTMLDOC v1.8.23

    NEW FEATURES

	- HTMLDOC now supports a full alpha channel in PNG
	  files.
	- HTMLDOC now reports an error when a table, image, or
	  section of text overflows into an adjacent table cell
	  or off the right edge of the page.

    CHANGES

	- The NEW SHEET page comment now breaks on N-up
	  boundaries when N is greater than 1.

    BUG FIXES

	- HTMLDOC tried to format tables with no rows or
	  columns. While the HTML in technically not in error,
	  it is not exactly something you'd expect someone to
	  do.
	- HTMLDOC didn't report an error when it could not
	  find the specified title page file.
	- HTMLDOC could crash if it was unable to create its
	  output files.
	- HTMLDOC could crash when writing HTML output
	  containing unknown HTML elements.
	- HTMLDOC could crash when writing HTML output if the
	  output document had no title.
	- The htmlGetText() function used a fixed-size (10k)
	  buffer which allowed for a buffer overflow.  The new
	  code (from HTMLDOC 1.9) allocates its buffer instead.
	- The header/footer text was not centered properly if